[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Drill0.png" type="Texture" id=1]
[ext_resource path="res://CreatableItems/Drill.gd" type="Script" id=2]
[ext_resource path="res://CreatableItems/MineDirectionHandler.gd" type="Script" id=3]
[ext_resource path="res://CreatableItems/SelectionPanel.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/Drill1.png" type="Texture" id=5]
[ext_resource path="res://Art/Drill2.png" type="Texture" id=6]
[ext_resource path="res://Art/Drill3.png" type="Texture" id=7]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
render_mode unshaded, blend_disabled;

uniform float direction = 0;

// based on a shader by bemyak on the godot QA page here: https://godotengine.org/qa/41400/simple-texture-rotation-shader
// 0 = 0
// 4.7 = 270


vec2 rotateUV(vec2 uv, vec2 pivot, float rotation) {
    float cosa = cos(rotation);
    float sina = sin(rotation);
    uv -= pivot;
    return vec2(
        cosa * uv.x - sina * uv.y,
        cosa * uv.y + sina * uv.x 
    ) + pivot;
}

void vertex() {
    VERTEX = rotateUV(VERTEX, 0.5/TEXTURE_PIXEL_SIZE, direction);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/direction = 0.0

[sub_resource type="Animation" id=3]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}

[node name="Drill" type="TextureRect"]
material = SubResource( 2 )
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MineDown" type="Position2D" parent="."]
position = Vector2( 16, 48 )

[node name="MineUp" type="Position2D" parent="."]
position = Vector2( 16, -16 )

[node name="MineRight" type="Position2D" parent="."]
position = Vector2( 48, 16 )

[node name="MineLeft" type="Position2D" parent="."]
position = Vector2( -16, 16 )

[node name="MineDirectionHandler" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="Left" type="Panel" parent="MineDirectionHandler"]
margin_left = -32.0
margin_top = -0.148651
margin_right = 0.337364
margin_bottom = 32.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Panel" parent="MineDirectionHandler"]
margin_left = 32.0
margin_top = -0.148651
margin_right = 64.0
margin_bottom = 32.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Panel" parent="MineDirectionHandler"]
margin_top = -32.0
margin_right = 32.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Panel" parent="MineDirectionHandler"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 64.0
custom_styles/panel = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Drilling = SubResource( 3 )
anims/Idle = SubResource( 4 )
[connection signal="selection_state_changed" from="." to="." method="_on_Drill_selection_state_changed"]
[connection signal="mine_direction_changed" from="MineDirectionHandler" to="." method="_on_MineDirectionHandler_mine_direction_changed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
